simplified docker-compose and updated readme

--- a/notebooks/reporter_qa.ipynb
+++ b/notebooks/reporter_qa.ipynb
@@ -187,13 +187,13 @@
    },
    "outputs": [],
    "source": [
-    "baseUrl = 'http://localhost:8002/route?json='\n",
+    "baseUrl = 'http://valhalla:8002/route?json='\n",
     "route = requests.get(baseUrl + json.dumps(jsonDict))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -444,8 +444,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reporter matched 94 GPS measurements to 45 OSMLR segments. Showing the first below: \n",
-      "{u'segment_id': 190220441225, u'begin_shape_index': 59, u'start_time': 1495571978.0, u'length': 192, u'end_time': 1495571979.721, u'end_shape_index': 59}\n"
+      "Reporter matched 94 GPS measurements to 47 OSMLR segments. Showing the first below: \n",
+      "{u'segment_id': 668577946162, u'begin_shape_index': 71, u'start_time': 1495573033.328, u'length': 180, u'end_time': 1495573033.892, u'end_shape_index': 71}\n"
      ]
     }
    ],
