initializing optimziation notebook

--- a/notebooks/validation.ipynb
+++ b/notebooks/validation.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# Open Traffic Reporter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map-Matching Validation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -21,28 +38,7 @@
     "import pickle\n",
     "import sys; sys.path.insert(0, os.path.abspath('..'));\n",
     "import validator.validator as val\n",
-    "\n",
     "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "# Open Traffic Reporter Validation Service "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "### 1. Generate Random Routes"
    ]
   },
   {
@@ -60,6 +56,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "### 1. Generate Random Routes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate routes from Google Maps POIs or Mapzen Venues"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -69,19 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "# routeList = val.get_POI_routes_by_length('Paris', 1, 5, 20, gmapsKey)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
+    "# routeList = val.get_POI_routes_by_length('Paris', 1, 5, 20, gmapsKey)\n",
     "routeList = val.get_routes_by_length('San Francisco', 1, 5, 10, mapzenKey)"
    ]
   },
@@ -105,20 +106,8 @@
    },
    "outputs": [],
    "source": [
-    "routeList = pickle.load(open('sf_routes.pkl','rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "pickle.dump(routeList, open('sf_routes.pkl','wb'))"
+    "# routeList = pickle.load(open('sf_routes.pkl','rb'))\n",
+    "# pickle.dump(routeList, open('sf_routes.pkl','wb'))"
    ]
   },
   {
@@ -154,6 +143,8 @@
     "    'trace_attr_url', 'reporter_url', 'max_edge_index_vs_shape_len'])\n",
     "outDfRow = -1\n",
     "saveResults = True\n",
+    "noiseLevels = np.linspace(0, 100, 21)\n",
+    "sampleRates = [1, 5, 10, 20, 30]\n",
     "\n",
     "for i, rteCoords in enumerate(x):\n",
     "    stName = rteCoords[0].keys()[0].encode(\"ascii\", \"ignore\")\n",
@@ -169,10 +160,7 @@
     "    edges, shapeCoords, traceAttrUrl = val.get_trace_attrs(shape, shapeMatch=\"map_snap\")\n",
     "    edges = val.get_coords_per_second(shapeCoords, edges, '2768')\n",
     "    avgDensity = np.mean([edge['density'] for edge in edges])\n",
-    "    noiseLevels = np.linspace(0, 100, 21)\n",
-    "    noiseLevels = [50.0]\n",
-    "    sampleRates = [1, 5, 10, 20, 30]\n",
-    "    sampleRates = [10]\n",
+    "\n",
     "    scores = []\n",
     "    \n",
     "    for noise in noiseLevels:\n",
@@ -221,7 +209,9 @@
    "cell_type": "code",
    "execution_count": 103,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -526,7 +516,9 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -537,7 +529,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -637,7 +631,7 @@
     "editable": true
    },
    "source": [
-    "### 5. Save the Scores to Master File"
+    "### 6. Save the Scores to Master File"
    ]
   },
   {
@@ -658,7 +652,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -669,7 +665,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -680,7 +678,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -702,7 +702,9 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -724,7 +726,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
