--- a/notebooks/validation.ipynb
+++ b/notebooks/validation.ipynb
@@ -1401,14 +1401,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "<img src=\"krumm_newson_dist.png\" alt=\"Drawing\" style=\"width: 400px;\" align=\"center\"/>"
+    "<img src=\"ss2.png\" alt=\"Drawing\"  align=\"center\"/>"
    ]
   },
   {
