post wb cleanup

--- a/notebooks/validation.ipynb
+++ b/notebooks/validation.ipynb
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 392,
+   "execution_count": 409,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1386,7 +1386,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "842edd40bec14730a133de3e1688627b"
+       "model_id": "9644f59be0224e2b87f3043466fed0e0"
       }
      },
      "metadata": {},
@@ -1404,7 +1404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"ss2.png\" alt=\"Drawing\"  align=\"center\"/>"
+    "<img src=\"ss.png\" alt=\"Drawing\"  align=\"center\"/>"
    ]
   },
   {
