post wb cleanup

--- a/notebooks/validation.ipynb
+++ b/notebooks/validation.ipynb
@@ -1403,7 +1403,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "<img src=\"ss3.png\" alt=\"Drawing\"  align=\"center\"/>"
+   ]
   },
   {
    "cell_type": "markdown",
