post wb cleanup

--- a/notebooks/validation.ipynb
+++ b/notebooks/validation.ipynb
@@ -593,7 +593,7 @@
     "editable": true
    },
    "source": [
-    "Because this grid search takes place in such high dimensional space ($\\text{noise levels} \\times \\text{sample rates} \\times \\beta \\ \\text{values} \\times \\sigma\\  \\text{values} \\times \\text{number of routes}$), it is recommended to use a smaller number of discrete noise levels for the section of the analysis (< 10). Rather than estimating match scores in increments of 5 m of noise, we use increments of 20 below"
+    "Because this grid search takes place in such high dimensional space - $\\text{noise levels} \\times \\text{sample rates} \\times \\beta \\ \\text{values} \\times \\sigma\\  \\text{values} \\times \\text{# routes}$ - it is recommended to use a smaller number of discrete noise levels for the section of the analysis (< 10). Rather than estimating match scores in increments of 5 m of noise, we use increments of 20 below"
    ]
   },
   {
@@ -1181,7 +1181,7 @@
     "editable": true
    },
    "source": [
-    "These charts suggest that prior knowledge of GPS sample rate can result in accuracy gains of up to 5% using the optimal speed error threshold."
+    "These charts suggest that _** prior knowledge of GPS sample rate can result in accuracy gains of ~5%**_ when used in conjunction with the optimal speed error threshold."
    ]
   },
   {
@@ -1691,7 +1691,7 @@
     "editable": true
    },
    "source": [
-    "The graph above shows the overall net-positive impact that lower road network density has on algorithm performance, especially at higher noise levels. Lower density metro areas can expect significantly better results than their denser counterparts, and this is an important message to convey to all Open Traffic stakeholders."
+    "The graph above shows the overall net-positive impact that lower road network density has on algorithm performance, especially at higher noise levels. _**Lower density metro areas can expect significantly better results than their denser counterparts, and this is an important message to convey to all Open Traffic stakeholders.**_"
    ]
   },
   {
