post wb cleanup

--- a/notebooks/validation.ipynb
+++ b/notebooks/validation.ipynb
@@ -629,7 +629,7 @@
     "editable": true
    },
    "source": [
-    "`grid_search_hmm_params()` will iterate through the sample rates, noise levels, $beta$ values and $sigma_z$ values for each of the sythetic routes that have already been generated. Because this process can be so slow, the results are saved incrementally in the background, and will be recombined in a later step."
+    "`grid_search_hmm_params()` will iterate through the sample rates, noise levels, $\\beta$ values and $\\sigma_z$ values for each of the sythetic routes that have already been generated. Because this process can be so slow, the results are saved incrementally in the background, and will be recombined in a later step."
    ]
   },
   {
