--- a/notebooks/map_matching_part_I.ipynb
+++ b/notebooks/map_matching_part_I.ipynb
@@ -201,7 +201,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![my gif](giphy.gif)\n",
+    "![my gif](giphy.gif)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<center>_A route (red line) resampled at 1 s intervals (red dots) and perturbed at 5 different levels of noise (blue dots). The matched route is shown as a blue line._</center>"
    ]
   },
@@ -240,7 +246,13 @@
     "editable": true
    },
    "source": [
-    "<img src=\"krumm_newson_dist.png\" alt=\"Drawing\" style=\"width: 400px;\" align=\"center\"/>\n",
+    "<img src=\"krumm_newson_dist.png\" alt=\"Drawing\" style=\"width: 400px;\" align=\"center\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<center>_From Newton and Krumm (2009)_</center>"
    ]
   },
@@ -313,7 +325,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"example_2.png\" alt=\"Drawing\" style=\"width: 70%;\"/>\n",
+    "<img src=\"example_2.png\" alt=\"Drawing\" style=\"width: 70%;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<center>_A perfect match at 65 m of noise (10 s sample rate)_</center>"
    ]
   },
@@ -341,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
