--- a/notebooks/map_matching_part_I.ipynb
+++ b/notebooks/map_matching_part_I.ipynb
@@ -201,14 +201,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![my gif](giphy.gif)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<center>_A route (red line) resampled at 1 s intervals (red dots) and perturbed at 5 different levels of noise (blue dots). The matched route is shown as a blue line._</center>"
+    "![my gif](giphy.gif)\n",
+    "\n",
+    "<center><i>A route (red line) resampled at 1 s intervals (red dots) and perturbed at 5 different levels of noise (blue dots). The matched route is shown as a blue line.</i></center>"
    ]
   },
   {
@@ -246,14 +241,8 @@
     "editable": true
    },
    "source": [
-    "<img src=\"krumm_newson_dist.png\" alt=\"Drawing\" style=\"width: 400px;\" align=\"center\"/>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<center>_From Newton and Krumm (2009)_</center>"
+    "<img src=\"krumm_newson_dist.png\" alt=\"Drawing\" style=\"width: 400px;\" align=\"center\"/>\n",
+    "<center><i>From Newton and Krumm (2009)</i></center>"
    ]
   },
   {
@@ -332,7 +321,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center>_A perfect match at 65 m of noise (10 s sample rate)_</center>"
+    "<center><i>A perfect match at 65 m of noise (10 s sample rate)</i></center>"
    ]
   },
   {
