--- a/notebooks/map_matching_part_I.ipynb
+++ b/notebooks/map_matching_part_I.ipynb
@@ -47,7 +47,7 @@
     "editable": true
    },
    "source": [
-    "The map-matching process is a lot more complicated than its name lets on (for an easy-to-read primer on the technical aspects of map matching, see [this](https://blog.mapbox.com/matching-gps-traces-to-a-map-73730197d0e2) excellent blog post written by our friends at Mapbox). For now, it is enough to know that it describes the process of snapping noisy GPS measurements to the road segments from which they were generated."
+    "(for an easy-to-read primer on the technical aspects of map matching, see [this](https://blog.mapbox.com/matching-gps-traces-to-a-map-73730197d0e2) excellent blog post written by our friends at Mapbox). For now, it is enough to know that it describes the process of snapping noisy GPS measurements to the road segments from which they were generated."
    ]
   },
   {
