--- a/notebooks/map_matching_part_I.ipynb
+++ b/notebooks/map_matching_part_I.ipynb
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For each route, we then pass the start and end coordinates to the Turn-By-Turn API to obtain the coordinates of the road segments along the route."
+    "For each route, we then pass the start and end coordinates to the Turn-By-Turn API to obtain the coordinates of the road segments along the route:"
    ]
   },
   {
@@ -270,18 +270,191 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The route shape then gets passed to the map matching service in order to obtain the coordinates and attributes of the road segments (i.e. edges) that lie along the original route"
+    "The route shape then gets passed to the map matching service in order to obtain the coordinates and attributes of the road segments (i.e. edges) that lie along the original route:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "edges, matchedPts, shapeCoords, _ = val.get_trace_attrs(shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can inspect the attributes returned for our example route:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>begin_shape_index</th>\n",
+       "      <th>end_shape_index</th>\n",
+       "      <th>length</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>density</th>\n",
+       "      <th>oneSecCoords</th>\n",
+       "      <th>segment_id</th>\n",
+       "      <th>num_segments</th>\n",
+       "      <th>starts_segment</th>\n",
+       "      <th>ends_segment</th>\n",
+       "      <th>begin_percent</th>\n",
+       "      <th>end_percent</th>\n",
+       "      <th>begin_resampled_shape_index</th>\n",
+       "      <th>end_resampled_shape_index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3738534172576</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.057</td>\n",
+       "      <td>40</td>\n",
+       "      <td>15</td>\n",
+       "      <td>[[-122.40638, 37.775463], [-122.406469252, 37....</td>\n",
+       "      <td>497780021152</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>962716097074</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.153</td>\n",
+       "      <td>35</td>\n",
+       "      <td>15</td>\n",
+       "      <td>[[-122.406916267, 37.7751617604], [-122.406994...</td>\n",
+       "      <td>39633672754</td>\n",
+       "      <td>1</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>931778910770</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.041</td>\n",
+       "      <td>35</td>\n",
+       "      <td>15</td>\n",
+       "      <td>[[-122.408144091, 37.7761309014], [-122.408222...</td>\n",
+       "      <td>39633672754</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3780477212576</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>40</td>\n",
+       "      <td>15</td>\n",
+       "      <td>[[-122.408302818, 37.7763981724], [-122.408249...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4122363320224</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.049</td>\n",
+       "      <td>40</td>\n",
+       "      <td>15</td>\n",
+       "      <td>[[-122.408159625, 37.7765096426], [-122.408070...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              id  begin_shape_index  end_shape_index  length  speed  density  \\\n",
+       "0  3738534172576                  0                1   0.057     40       15   \n",
+       "1   962716097074                  1                2   0.153     35       15   \n",
+       "2   931778910770                  2                3   0.041     35       15   \n",
+       "3  3780477212576                  3                4   0.018     40       15   \n",
+       "4  4122363320224                  4                5   0.049     40       15   \n",
+       "\n",
+       "                                        oneSecCoords    segment_id  \\\n",
+       "0  [[-122.40638, 37.775463], [-122.406469252, 37....  497780021152   \n",
+       "1  [[-122.406916267, 37.7751617604], [-122.406994...   39633672754   \n",
+       "2  [[-122.408144091, 37.7761309014], [-122.408222...   39633672754   \n",
+       "3  [[-122.408302818, 37.7763981724], [-122.408249...          None   \n",
+       "4  [[-122.408159625, 37.7765096426], [-122.408070...          None   \n",
+       "\n",
+       "   num_segments starts_segment ends_segment  begin_percent  end_percent  \\\n",
+       "0             1           True         True            0.0          1.0   \n",
+       "1             1           True         True            0.0          1.0   \n",
+       "2             1          False        False            0.0          1.0   \n",
+       "3             0           None         None            NaN          NaN   \n",
+       "4             0           None         None            NaN          NaN   \n",
+       "\n",
+       "  begin_resampled_shape_index end_resampled_shape_index  \n",
+       "0                        None                      None  \n",
+       "1                        None                      None  \n",
+       "2                        None                      None  \n",
+       "3                        None                      None  \n",
+       "4                        None                      None  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val.format_edge_df(edges).head()"
    ]
   },
   {
